--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,3 +21,7 @@ logging:
     com.assetmarket.api: DEBUG
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+
+telegram:
+  bot:
+    token: ${TELEGRAM_BOT_TOKEN:REDACTED_BOT_TOKEN}
